Start explanations of lowered code

--- a/thesis/jlcode.sty
+++ b/thesis/jlcode.sty
@@ -1041,6 +1041,7 @@ literate=
 {⋱}{{\ucc{${\scriptstyle \rddots}$}}}{3}
 {⋰}{{\ucc{${\scriptstyle \riddots}$}}}{3}
 {ℓ}{{\ucc{$\ell$}}}{1}
+{§}{{\ucc{\S}}}{1}
 %
 % box drawing characters
 %
