--- a/thesis/background.tex
+++ b/thesis/background.tex
@@ -457,33 +457,52 @@ cannot be performed in this representation.\todo{cite autoconj etc.}
 \section{Compilation and Metaprogramming in Julia}
 \label{sec:comp-metapr-julia}
 
-sldk sldks dlks dlksfj dlkfjs lkdjf slkdjls dkf
+sldk sldks dlks dlksfj dlkfjs lkdjf slkdjls dkf\texttt{\S}
 
 \begin{lstlisting}
 function foo(x)
     y = zero(eltype(x))
     for i in eachindex(x)
-        y += sin(x[i])
-        @show y
+        @show y += sin(x[i])
     end
     return y
 end
 \end{lstlisting}
 
+The macro invocation of \jlinl{@show} will be converted to a function call receiving as input the
+expression
+\begin{lstlisting}
+Expr(:+=, :y, Expr(:call, :sin, Expr(:ref, :x, :i)))
+\end{lstlisting}
+In this particular case, the nested structure is not taken advantage of or transformed, but simply
+taken as is and used to print the value of the expression, labelled by it's form in the code:
 \begin{lstlisting}
 function foo(x)
-    y = zero(x)
+    y = zero(eltype(x))
     for i = eachindex(x)
-        y += sin(x[i])
         begin
-            Base.println("y = ", Base.repr(var"#18#value" = y))
-            var"#18#value"
+            Base.println(
+                "y += sin(x[i]) = ",
+                Base.repr(var"#24#value" = (y += sin(x[i]))))
+            var"#24#value"
         end
     end
     return y
 end
 \end{lstlisting}
-
+After macro expansion, the code of the function is \emph{lowered} into an intermediate
+representation consisting of only function calls and branches.  For example, the for loop in the
+example is converted into code equivalent to
+\begin{lstlisting}
+iterable = eachindex(x)
+iter_result = iterate(iterable)
+while !(iter_result === nothing)
+    i, state = iter
+    @show y += sin(x[i])
+    iter_result = iterate(iterable, state)
+end
+\end{lstlisting}
+which is then lowered into three blocks related through conditional branching statements.
 \begin{lstlisting}
 1 ─ %1  = Main.eltype(x)
 │         y = Main.zero(%1)
@@ -491,24 +510,24 @@ end
 │         @_4 = Base.iterate(%3)
 │   %5  = @_4 === nothing
 │   %6  = Base.not_int(%5)
-└──       goto #4 if not %6
+└──       goto §4 if not %6
 2 ┄ %8  = @_4
 │         i = Core.getfield(%8, 1)
 │   %10 = Core.getfield(%8, 2)
 │   %11 = y
 │   %12 = Base.getindex(x, i)
 │   %13 = Main.sin(%12)
-│         y = %11 + %13
-│         value = y
-│   %16 = y
-│   %17 = Base.repr(%16)
-│         Base.println("y = ", %17)
+│   %14 = %11 + %13
+│         y = %14
+│         value = %14
+│   %17 = Base.repr(%14)
+│         Base.println("y += sin(x[i]) = ", %17)
 │         value
 │         @_4 = Base.iterate(%3, %10)
 │   %21 = @_4 === nothing
 │   %22 = Base.not_int(%21)
-└──       goto #4 if not %22
-3 ─       goto #2
+└──       goto §4 if not %22
+3 ─       goto §2
 4 ┄       return y
 \end{lstlisting}
 
@@ -529,7 +548,7 @@ end
   %14 = Main.sin(%13)
   %15 = %10 + %14
   %16 = Base.repr(%15)
-  %17 = Base.println("y = ", %16)
+  %17 = Base.println("y += sin(x[i]) = ", %16)
   %18 = Base.iterate(%5, %12)
   %19 = %18 === nothing
   %20 = Base.not_int(%19)
@@ -541,98 +560,87 @@ end
 
 % code_warntype
 \begin{lstlisting}
-Variables
-  #self#::Core.Compiler.Const(foo, false)
-  x::Array{Float64,1}
-  y::Float64
-  @_4::Union{Nothing, Tuple{Int64,Int64}}
-  i::Int64
-  value::Float64
-
-Body::Float64
 1 ─ %1  = Main.eltype(x)::Core.Compiler.Const(Float64, false)
 │         (y = Main.zero(%1))
 │   %3  = Main.eachindex(x)::Base.OneTo{Int64}
 │         (@_4 = Base.iterate(%3))
 │   %5  = (@_4 === nothing)::Bool
 │   %6  = Base.not_int(%5)::Bool
-└──       goto #4 if not %6
+└──       goto §4 if not %6
 2 ┄ %8  = @_4::Tuple{Int64,Int64}::Tuple{Int64,Int64}
 │         (i = Core.getfield(%8, 1))
 │   %10 = Core.getfield(%8, 2)::Int64
 │   %11 = y::Float64
 │   %12 = Base.getindex(x, i)::Float64
 │   %13 = Main.sin(%12)::Float64
-│         (y = %11 + %13)
-│         (value = y)
-│   %16 = y::Float64
-│   %17 = Base.repr(%16)::String
-│         Base.println("y = ", %17)
+│   %14 = (%11 + %13)::Float64
+│         (y = %14)
+│         (value = %14)
+│   %17 = Base.repr(%14)::String
+│         Base.println("y += sin(x[i]) = ", %17)
 │         value
 │         (@_4 = Base.iterate(%3, %10))
 │   %21 = (@_4 === nothing)::Bool
 │   %22 = Base.not_int(%21)::Bool
-└──       goto #4 if not %22
-3 ─       goto #2
+└──       goto §4 if not %22
+3 ─       goto §2
 4 ┄       return y
 \end{lstlisting}
 
 % code_typed
 \begin{lstlisting}
-CodeInfo(
 1 ── %1  = Base.arraysize(x, 1)::Int64
 │    %2  = Base.slt_int(%1, 0)::Bool
 │    %3  = Base.ifelse(%2, 0, %1)::Int64
 │    %4  = Base.slt_int(%3, 1)::Bool
-└───       goto #3 if not %4
-2 ──       goto #4
-3 ──       goto #4
-4 ┄─ %8  = φ (#2 => true, #3 => false)::Bool
-│    %9  = φ (#3 => 1)::Int64
-│    %10 = φ (#3 => 1)::Int64
+└───       goto §3 if not %4
+2 ──       goto §4
+3 ──       goto §4
+4 ┄─ %8  = φ (§2 => true, §3 => false)::Bool
+│    %9  = φ (§3 => 1)::Int64
+│    %10 = φ (§3 => 1)::Int64
 │    %11 = Base.not_int(%8)::Bool
-└───       goto #22 if not %11
-5 ┄─ %13 = φ (#4 => 0.0, #21 => %18)::Float64
-│    %14 = φ (#4 => %9, #21 => %42)::Int64
-│    %15 = φ (#4 => %10, #21 => %43)::Int64
+└───       goto §22 if not %11
+5 ┄─ %13 = φ (§4 => 0.0, §21 => %18)::Float64
+│    %14 = φ (§4 => %9, §21 => %42)::Int64
+│    %15 = φ (§4 => %10, §21 => %43)::Int64
 │    %16 = Base.arrayref(true, x, %14)::Float64
 │    %17 = invoke Main.sin(%16::Float64)::Float64
 │    %18 = Base.add_float(%13, %17)::Float64
 │    %19 = Base.sle_int(1, 1)::Bool
-└───       goto #7 if not %19
+└───       goto §7 if not %19
 6 ── %21 = Base.sle_int(1, 0)::Bool
-└───       goto #8
+└───       goto §8
 7 ──       nothing::Nothing
-8 ┄─ %24 = φ (#6 => %21, #7 => false)::Bool
-└───       goto #10 if not %24
+8 ┄─ %24 = φ (§6 => %21, §7 => false)::Bool
+└───       goto §10 if not %24
 9 ──       invoke Base.getindex(()::Tuple, 1::Int64)::Union{}
 └───       $(Expr(:unreachable))::Union{}
-10 ┄       goto #11
-11 ─       goto #12
-12 ─       goto #13
-13 ─       goto #14
+10 ┄       goto §11
+11 ─       goto §12
+12 ─       goto §13
+13 ─       goto §14
 14 ─ %32 = invoke Base.:(var"#sprint#339")(
-             nothing::Nothing, 0::Int64, sprint::typeof(sprint),
+             nothing::Nothing, 0::Int64, sprint::typeof(sprint), 
              show::Function, %18::Float64
            )::String
-└───       goto #15
-15 ─       goto #16
-16 ─       goto #17
-17 ─       invoke Base.println("y = "::String, %32::String)::Any
+└───       goto §15
+15 ─       goto §16
+16 ─       goto §17
+17 ─       invoke Base.println("y += sin(x[i]) = "::String, %32::String)::Any
 │    %37 = (%15 === %3)::Bool
-└───       goto #19 if not %37
-18 ─       goto #20
+└───       goto §19 if not %37
+18 ─       goto §20
 19 ─ %40 = Base.add_int(%15, 1)::Int64
-└───       goto #20
-20 ┄ %42 = φ (#19 => %40)::Int64
-│    %43 = φ (#19 => %40)::Int64
-│    %44 = φ (#18 => true, #19 => false)::Bool
+└───       goto §20
+20 ┄ %42 = φ (§19 => %40)::Int64
+│    %43 = φ (§19 => %40)::Int64
+│    %44 = φ (§18 => true, §19 => false)::Bool
 │    %45 = Base.not_int(%44)::Bool
-└───       goto #22 if not %45
-21 ─       goto #5
-22 ┄ %48 = φ (#20 => %18, #4 => 0.0)::Float64
+└───       goto §22 if not %45
+21 ─       goto §5
+22 ┄ %48 = φ (§20 => %18, §4 => 0.0)::Float64
 └───       return %48
-) => Float64
 \end{lstlisting}
 
 \textcite{singer2018static}
