Write introduciton stuff

--- a/thesis/discussion.tex
+++ b/thesis/discussion.tex
@@ -7,8 +7,8 @@ of a very specific inference method.  As we have seen, two separate pieces of so
 from it: \irtrackerjl{} and \autogibbsjl{}.  The underlying issue~-- that \turingjl{} lacks a
 structural representation of models~-- is not at all resolved by them.
 
-The real difficulty is that dynamic models cannot be satisfactorily handled through static snapshots
-(cf. Venture).  TODO: compare to AutoGrad.
+The real difficulty is that dynamic models cannot be satisfactorily handled through static
+snapshots. \todo{compare to autograd, venture, church}
 
 (\juliapackage{Cassette.jl} is a package very similar to \juliapackage{IRTools.jl})
 \begin{quote}
