--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -80,6 +80,15 @@
   primaryClass = {cs, stat}
 }
 
+@inproceedings{becker2020dynamic,
+  title = {Dynamic Specialization in Trace-Based Probabilistic Programming Systems},
+  author = {Becker, McCoy R},
+  date = {2020},
+  eventtitle = {{{ProbProg2020}}},
+  file = {/home/philipp/Zotero/storage/Z6RD9BKA/Becker - Dynamic specialization in trace-based probabilisti.pdf},
+  langid = {english}
+}
+
 @online{bernstein2020differentiating,
   title = {Differentiating a {{Tensor Language}}},
   author = {Bernstein, Gilbert and Mara, Michael and Li, Tzu-Mao and Maclaurin, Dougal and Ragan-Kelley, Jonathan},
@@ -460,21 +469,6 @@
   eprint = {1206.3255},
   eprinttype = {arxiv},
   file = {/home/philipp/Zotero/storage/DYGF5DNS/Goodman et al_2012_Church.pdf;/home/philipp/Zotero/storage/C92LCFDC/1206.html},
-  primaryClass = {cs}
-}
-
-@online{goodman2014church,
-  title = {Church: A Language for Generative Models},
-  shorttitle = {Church},
-  author = {Goodman, Noah and Mansinghka, Vikash and Roy, Daniel M. and Bonawitz, Keith and Tenenbaum, Joshua B.},
-  date = {2014-07-15},
-  url = {http://arxiv.org/abs/1206.3255},
-  urldate = {2020-10-26},
-  abstract = {We introduce Church, a universal language for describing stochastic generative processes. Church is based on the Lisp model of lambda calculus, containing a pure Lisp as its deterministic subset. The semantics of Church is defined in terms of evaluation histories and conditional distributions on such histories. Church also includes a novel language construct, the stochastic memoizer, which enables simple description of many complex non-parametric models. We illustrate language features through several examples, including: a generalized Bayes net in which parameters cluster over trials, infinite PCFGs, planning by inference, and various non-parametric clustering models. Finally, we show how to implement query on any Church program, exactly and approximately, using Monte Carlo techniques.},
-  archivePrefix = {arXiv},
-  eprint = {1206.3255},
-  eprinttype = {arxiv},
-  file = {/home/philipp/Zotero/storage/H9M3QKTR/Goodman et al_2014_Church.pdf},
   primaryClass = {cs}
 }
 
@@ -1406,6 +1400,19 @@
   file = {/home/philipp/Zotero/storage/CUI3CBEP/van Merriënboer et al_2018_Automatic differentiation in ML.pdf;/home/philipp/Zotero/storage/N6SDBST9/1810.html},
   options = {useprefix=true},
   primaryClass = {cs, stat}
+}
+
+@inproceedings{vanmerrienboer2018tangent,
+  title = {Tangent: {{Automatic}} Differentiation Using Source-Code Transformation for Dynamically Typed Array Programming},
+  booktitle = {Advances in Neural Information Processing Systems 31},
+  author = {van Merrienboer, Bart and Moldovan, Dan and Wiltschko, Alexander},
+  editor = {Bengio, S. and Wallach, H. and Larochelle, H. and Grauman, K. and Cesa-Bianchi, N. and Garnett, R.},
+  date = {2018},
+  pages = {6256--6265},
+  publisher = {{Curran Associates, Inc.}},
+  url = {http://papers.nips.cc/paper/7863-tangent-automatic-differentiation-using-source-code-transformation-for-dynamically-typed-array-programming.pdf},
+  file = {/home/philipp/Zotero/storage/QYJ2BPQE/van Merriënboer et al. - Tangent Automatic differentiation using source-co.pdf},
+  options = {useprefix=true}
 }
 
 @report{vihola2020lectures,
