--- a/thesis/jlcode.sty
+++ b/thesis/jlcode.sty
@@ -231,6 +231,7 @@ morestring=[s]{s"}{"},%
 morestring=[s]{text"}{"},%
 morestring=[s]{uint128"}{"},%
 morestring=[s]{v"}{"},%
+morestring=[s]{var"}{"},%
 %
 }[keywords,comments,strings]
 
