--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -1529,6 +1529,18 @@
   type = {PhD Thesis}
 }
 
+@online{xla2020,
+  title = {{{XLA}}: {{Optimizing Compiler}} for {{Machine Learning}}},
+  shorttitle = {{{XLA}}},
+  date = {2020},
+  journaltitle = {TensorFlow},
+  url = {https://www.tensorflow.org/xla},
+  urldate = {2020-10-27},
+  abstract = {XLA is a compiler-based linear algebra execution engine.},
+  file = {/home/philipp/Zotero/storage/TIFIE6HA/xla.html},
+  langid = {english}
+}
+
 @article{yugibbs,
   title = {Gibbs {{Sampling Methods}} for {{Dirichlet Process Mixture Model}}: {{Technical Details}}},
   author = {Yu, Xiaodong},
